--- a/config/default.toml
+++ b/config/default.toml
@@ -9,6 +9,7 @@ suggestions = 3
 [[rules]]
 id = "json_prettify"
 name = "JSON Prettify"
+description = "Pretty-print JSON with stable indentation."
 transform = "json_prettify"
 auto_accept = false
 [rules.match]
@@ -17,6 +18,7 @@ content_types = ["json"]
 [[rules]]
 id = "json_minify"
 name = "JSON Minify"
+description = "Minify JSON into a single line."
 transform = "json_minify"
 auto_accept = false
 [rules.match]
@@ -25,6 +27,7 @@ content_types = ["json"]
 [[rules]]
 id = "json_to_yaml"
 name = "JSON → YAML"
+description = "Convert JSON to YAML."
 transform = "json_to_yaml"
 auto_accept = false
 [rules.match]
@@ -33,6 +36,7 @@ content_types = ["json"]
 [[rules]]
 id = "yaml_to_json"
 name = "YAML → JSON"
+description = "Convert YAML to pretty JSON."
 transform = "yaml_to_json"
 auto_accept = false
 [rules.match]
@@ -41,6 +45,7 @@ content_types = ["yaml"]
 [[rules]]
 id = "strip_formatting"
 name = "Paste as Plain Text"
+description = "Strip formatting and normalize whitespace."
 transform = "strip_formatting"
 auto_accept = false
 [rules.match]
@@ -49,6 +54,7 @@ content_types = ["text", "list", "json", "yaml"]
 [[rules]]
 id = "bullet_normalize"
 name = "Normalize Bullet List"
+description = "Normalize bullet markers and indentation."
 transform = "bullet_normalize"
 auto_accept = false
 [rules.match]
@@ -57,8 +63,8 @@ content_types = ["list"]
 [[rules]]
 id = "timestamp_normalize"
 name = "Normalize Timestamp"
+description = "Normalize timestamps (epoch ↔ ISO-8601)."
 transform = "timestamp_normalize"
 auto_accept = false
 [rules.match]
 content_types = ["timestamp"]
-
