--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         with:
           components: rustfmt, clippy
+      - name: Cargo cache
+        uses: Swatinem/rust-cache@v2
       - name: Format
         run: cargo fmt --all -- --check
       - name: Build
@@ -23,3 +25,10 @@ jobs:
         run: cargo test
       - name: Clippy
         run: cargo clippy -- -D warnings
+      - name: Release build
+        run: cargo build --release
+      - name: Upload release binary
+        uses: actions/upload-artifact@v4
+        with:
+          name: pasteflow-macos
+          path: target/release/pasteflow
